src/test/ui/parser/bounds-lifetime-where-1.stderr
error: expected `:`, found `;`
  --> $DIR/bounds-lifetime-where-1.rs:1:16
   |
LL | type A where 'a; //~ ERROR expected `:`, found `;`
   |                ^ expected `:`

error: aborting due to previous error

