src/test/ui/parser/bounds-lifetime-where-1.rs
// compile-flags: -Z parse-only

type A where 'a; //~ ERROR expected `:`, found `;`

fn main() {}
